# kys-jinyong-mod

./: CMakeLists.txt  README.md  SDLPal_iOS_Deploy_Guide.md  SKILL.md  credentials.json  iOS_Device_Deployment_Guide.md  kys  run.sh
cifa/: Cifa.cpp
doc/: iOS移植说明.md
docs/: NUMERIC_SYSTEM_REDESIGN.md  TEST_REPORT.md
ios/: .gitignore  README-Xcode静态库.md  build-prebuilt-minimal.sh  generate-project.sh  project.yml  rebuild-lua.sh  verify-prebuilt.sh
ios/KYSCPP.xcodeproj/: project.pbxproj
ios/KYSCPP.xcodeproj/xcshareddata/xcschemes/: KYSCPP.xcscheme
ios/plist/: Info.plist
ios/xcconfig/: Base.xcconfig  Debug.xcconfig
scripts/: pack_game_zip.sh
src/: Application.cpp  Audio.cpp  Audio.h  BattleMap.cpp  BattleMap.h  BattleMenu.cpp  BattleScene.cpp  BattleScene.cpp.tmp  BattleScene.cpp.tmp2  BattleScene.h  BattleSceneHades.cpp  BattleScenePaper.cpp  BattleSceneSekiro.cpp  CMakeLists.txt  Engine.cpp  Engine.h  Event.cpp  Event.h  GameUtil.h  MainScene.cpp  MainScene.h  NewSave.h  PlatformMobile.h  Save.cpp  Save.h  Scene.h  ScriptLua.cpp  ScriptLua.h  ShowRoleDifference.cpp  SubScene.cpp  SubScene.h  Talk.cpp  Talk.h  TeamMenu.cpp  Types.cpp  Types.h  UI.cpp  UI.h  UIConfig.cpp  UIFreeBattle.cpp  (+12 more)
